--- a/projetos.html
+++ b/projetos.html
@@ -6,14 +6,14 @@
       <title>projetos</title>
       <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="background-image: url(img/pierry3.jpg);background-size: 700px;background-position: center center;">
 <header>
         <nav>
             <ul>
                 <li> <a href="index.html">Home</a></li>
                 <li> <a href="sobre.html">Sobre</a></li>
+                <li> <a href="contato.html">Experiências</a></li>
                 <li> <a href="projetos.html">Projetos</a></li>
-                <li> <a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
                 </tr>
                 <tr>
                     <td>Núcleo de Faturamento Centralizado (NFC)</td>
-                    <td>Acompanhamento do desempenho do faturamento das novas unidades da empresa</td>
+                    <td>Acompanhamento do desempenho do faturamento das novas unidades da empresa, 3 grupos de energia e mais de R$ 20 milhões mês</td>
                     <td>2022/2023</td>
                 </tr>
                 <tr>
@@ -46,11 +46,17 @@
                     <td>Premiações nacionais e internacionais em inovação no setor elétrico, Innovation Challenger</td>
                     <td>2019/2020</td>
                 </tr>
+                <tr>
+                    <td>Públicações Acadêmicas a nível nacional</td>
+                    <td>Artigo publicado na revista planejamento e politicas públicas ==> <a href="https://www.ipea.gov.br/ppp/index.php/PPP/article/view/923" target="_blank">IPEA GOVERNO FEDERAL </a></td>
+                    <td>2017/2018</td>
+                </tr>
                 <table>
+            <h2 class="item"> Acesse minha rede social profissional e saiba mais ==> <a href="https://www.linkedin.com/in/cicero-pierry-bezerra-dos-santos-msc-33449272?originalSubdomain=br" target="_blank">Linkedin </a> </h2>
         </section>
     </main>
     <footer>
-        <p>&copy; Cicero Pierry, todos os direitos reservados</p>
+        <p style="-webkit-text-fill-color: whitesmoke;">&copy; Cicero Pierry, todos os direitos reservados</p>
     </footer>
     
 </body>
