--- a/projetos.html
+++ b/projetos.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <section id="home">
+        <section id="home" class="container">
             <h1> Principais Projetos</h1>
             <table id="table-projetos">
                 <tr>
@@ -60,4 +60,5 @@
     </footer>
     
 </body>
+
 </html>
