--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
    <main>
-        <section id="home">
+        <section id="home" class="container">
             <div class="item"><h1> Locais de Desenvolvimento e Contribuições - Últimos 10 anos</h1>
 <p class="item4">COSAMPA PROJETOS E CONSTRUÇÕES LTDA 2013 a 2015: COORDENADOR </p>
 <p class="item6">Atuação na Área de gestão de contratos, folhas de pagamento, impostos e equipes, estudo de viabilidade, elaboração de propostas técnicas e comerciais para novos negócios, acompanhamento de indicadores (produtividade, segurança, receitas e custos), gestão de KPI’s do setor elétrico da empresa, rentabilidade de projetos, produtividade e treinamentos de equipes, relacionamento com os clientes interno e externo, gestão de ativos, aditivos, ajustes de precificação e revisões contratual.
@@ -39,4 +39,5 @@
     <footer>
         <h7 style="-webkit-text-fill-color: aliceblue;">&copy; Cicero Pierry, todos os direitos reservados</h7>
     </footer>
+
 </html>
