--- a/projetos.html
+++ b/projetos.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <section id="home" class="container">
+        <section id="home" class="container2">
             <h1> Principais Projetos</h1>
             <table id="table-projetos">
                 <tr>
@@ -52,7 +52,7 @@
                     <td>2017/2018</td>
                 </tr>
                 <table>
-            <h2 class="item"> Acesse minha rede social profissional e saiba mais ==> <a href="https://www.linkedin.com/in/cicero-pierry-bezerra-dos-santos-msc-33449272?originalSubdomain=br" target="_blank">Linkedin </a> </h2>
+            <h2> Acesse minha rede social profissional e saiba mais ==> <a href="https://www.linkedin.com/in/cicero-pierry-bezerra-dos-santos-msc-33449272?originalSubdomain=br" target="_blank">Linkedin </a> </h2>
         </section>
     </main>
     <footer>
