--- a/projetos.html
+++ b/projetos.html
@@ -20,7 +20,7 @@
     <main>
         <section id="home" class="container2">
             <h1> Principais Projetos</h1>
-            <table id="table-projetos">
+            <table id="table-projetos" class="container2">
                 <tr>
                     <th>Nome do Projeto</th>
                     <th>Detalhes</th>
@@ -52,11 +52,11 @@
                     <td>2017/2018</td>
                 </tr>
                 <table>
-            <h2> Acesse minha rede social profissional e saiba mais ==> <a href="https://www.linkedin.com/in/cicero-pierry-bezerra-dos-santos-msc-33449272?originalSubdomain=br" target="_blank">Linkedin </a> </h2>
         </section>
+        <h2 id="home"> Acesse minha rede social profissional e saiba mais ==> <a href="https://www.linkedin.com/in/cicero-pierry-bezerra-dos-santos-msc-33449272?originalSubdomain=br" target="_blank">Linkedin </a> </h2>
     </main>
     <footer>
-        <p style="-webkit-text-fill-color: whitesmoke;">&copy; Cicero Pierry, todos os direitos reservados</p>
+        <p>&copy; Cicero Pierry, todos os direitos reservados</p>
     </footer>
     
 </body>
