--- a/sobre.html
+++ b/sobre.html
@@ -37,7 +37,7 @@ Reconhecido por resultados expressivos em recuperação de receitas, fechamento 
 <p class="item5">Facilitador no método de gestão da rotina, facilitador academia de lideres in company, formação em BPMN, auditor líder ISO 14.001, cursos de transformadores de força (manutenção e ensaios), inspeção em linhas de AT, equipamentos telecomandados e smartgrid, proteção e automação de SED’S e redes de MT, ensaios e testes elétricos e eletromecânicos, curso de FV (montagem e manutenção), curso de geração heliotérmica, engenharia da confiabilidade, técnicas manutenção PCM,  Lean Manufacture, simulações ARENA (Teoria das filas).</p>
 
 <h6 class="item4"> Habilidades</h6>
-            <table id="table-projetos" class="container2">
+            <table class="container2">
                 <tr>
                     <th>Comportamentais</th>
                     <th>Linguisticas</th>
@@ -60,3 +60,4 @@ Reconhecido por resultados expressivos em recuperação de receitas, fechamento 
     </footer>
 
 </html>
+
