--- a/sobre.html
+++ b/sobre.html
@@ -37,13 +37,13 @@ Reconhecido por resultados expressivos em recuperação de receitas, fechamento 
 <p class="item5">Facilitador no método de gestão da rotina, facilitador academia de lideres in company, formação em BPMN, auditor líder ISO 14.001, cursos de transformadores de força (manutenção e ensaios), inspeção em linhas de AT, equipamentos telecomandados e smartgrid, proteção e automação de SED’S e redes de MT, ensaios e testes elétricos e eletromecânicos, curso de FV (montagem e manutenção), curso de geração heliotérmica, engenharia da confiabilidade, técnicas manutenção PCM,  Lean Manufacture, simulações ARENA (Teoria das filas).</p>
 
 <h6 class="item4"> Habilidades</h6>
-            <table class="container2">
-                <tr>
+            <table id="table-projetos">
+                <tr  class="container2">
                     <th>Comportamentais</th>
                     <th>Linguisticas</th>
                     <th>Informáticas</th>
                 </tr>
-                <tr>
+                <tr class="container2">
                     <td class="item3">Comunicação em público, gestão de conflitos, desenvolvimento da equipe, empatia, flexibilidade, engajamento, dinamismo e inovação.</td>
                     <td  class="item3">Inglês – Avançado; Espanhol – Avançado; Italiano – Básico.</td>
                     <td class="item3">	C e C++ (avançado); R*(avançado); Excel (avançado); Power BI (avançado); Visual Básic (avançado); Word (intermediário); Power Point (Intermediário.); HTML5 (básico); Python (básico).</td>
@@ -60,4 +60,5 @@ Reconhecido por resultados expressivos em recuperação de receitas, fechamento 
     </footer>
 
 </html>
+
 
