--- a/projetos.html
+++ b/projetos.html
@@ -20,7 +20,7 @@
     <main>
         <section id="home" class="container2">
             <h1> Principais Projetos</h1>
-            <table id="table-projetos">
+            <table id="table-projetos" class="container2">
                 <tr>
                     <th>Nome do Projeto</th>
                     <th>Detalhes</th>
@@ -51,7 +51,7 @@
                     <td>Artigo publicado na revista planejamento e politicas públicas ==> <a href="https://www.ipea.gov.br/ppp/index.php/PPP/article/view/923" target="_blank">IPEA GOVERNO FEDERAL </a></td>
                     <td>2017/2018</td>
                 </tr>
-                <table>     
+                <table>
         </section>
         <h2 id="home"> Acesse minha rede social profissional e saiba mais ==> <a href="https://www.linkedin.com/in/cicero-pierry-bezerra-dos-santos-msc-33449272?originalSubdomain=br" target="_blank">Linkedin </a> </h2>
     </main>
@@ -60,7 +60,4 @@
     </footer>
     
 </body>
-
 </html>
-
-
