--- a/projetos.html
+++ b/projetos.html
@@ -20,7 +20,7 @@
     <main>
         <section id="home" class="container2">
             <h1> Principais Projetos</h1>
-            <table id="table-projetos" class="container2">
+            <table id="table-projetos">
                 <tr>
                     <th>Nome do Projeto</th>
                     <th>Detalhes</th>
