--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <section id="home">
+        <section id="home" class="container2">
             <div class="item"><h1> Sou Cicero Pierry Bezerra dos Santos, MSc</h1>
             <h2> Brasileiro, Habilitação B, CREA-RN – 2123009270, CREA-PB – 41037PB</h2>
             <h3> PCD: Membro superior esquerdo - CID 10: T92; G83.8</h3>
@@ -58,6 +58,4 @@ Reconhecido por resultados expressivos em recuperação de receitas, fechamento 
     <footer>
         <h7>&copy; Cicero Pierry, todos os direitos reservados</h7>
     </footer>
-
 </html>
-
