--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
 <p class="item4">ENEL DISTRIBUIÇÃO CE S/A 2019 a 2019: RESPONSÁVEL DE OPERAÇÕES E MANUTENÇÃO DE BT, MT, AT E SED (CENTRO SUL) </p>
 <p class="item6">Atendimentos técnicos e comerciais na unidade operativa Centro Sul, Centro de Serviço de Senador Pompeu, gestão de colaboradores diretos da EDCE e indireta de equipes parceiras no sistema de potência de alta, média e baixa tensão. </p>
 <p class="item4">CONTROL CONSTRUÇÕES S/A 2019 - ATUAL: GESTOR PLANEJAMENTO E CONTROLE </p>
-<p class="item6">Atuação na área de P&C e Gestão de Contratos, com elaboração de propostas técnicas (habilitações, dimensionamento e defesa de estrutura de turma, levantamento de tempos e movimentos) e comerciais (levantamento de custos de salários, beneficios, ferramentas, equipamentos, despesas administrativas e operacionais, definição de custo por estrutura e preço do certame, negociação e fechamento de contratos) para novos negócios no Brasil e América Latina, gestão de contratos ativos e em desmobilização, negociações, acompanhamento do desempenho, desenho de processos e pleitos junto a contratante, desdobramento estratégico nas unidades operacionais nos estados do Paraíba, Alagoas, Minas Gerais, Goiás e Ceará.</p>
+<p class="item6">Atuação na área de P&C e Gestão de Contratos, com elaboração de propostas técnicas (habilitações, dimensionamento e defesa de estrutura, levantamento de tempos, movimentos e produtividade) e comerciais (levantamento de custos de salários, beneficios, ferramentas, equipamentos, despesas administrativas e operacionais, definição de custo por estrutura e preço do certame, negociação e fechamento de contratos) para novos negócios no Brasil e América Latina, gestão de contratos ativos e em desmobilização, negociações, acompanhamento do desempenho, desenho de processos e pleitos junto a contratante, desdobramento estratégico nas unidades operacionais nos estados do Paraíba, Alagoas, Minas Gerais, Goiás e Ceará.</p>
 <p class="item4"><a href="projetos.html"> >>>> Continue para ver meus projetos e resultados alcançados >>>> </a></p>
 </div>
         </section>
@@ -41,3 +41,4 @@
     </footer>
 
 </html>
+
