--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="item">
             <h1> Bem vindo ao Meu Portifólio</h1>
             <h2> Eu Sou Pierry</h2>
-            <img id="profile" src="img/pierry.jpg" alt="Foto do Pierry">
+            <img id="profile" src="img/pierry9.jpg" alt="Foto do Pierry">
             <p class="item2"> Venha Conhecer mais sobre mim, minhas Formações Acadêmicas, Experiências e Resultados Alcançados</p>
             <p class="item2"><a href="sobre.html"> Click aqui e saiba mais </a></p>
             </div>
@@ -32,4 +32,5 @@
         <p>&copy; Cicero Pierry, todos os direitos reservados</p>
     </footer>
 </body>
+
 </html>
