--- a/projetos.html
+++ b/projetos.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section id="home" class="container2">
-            <h1> Principais Projetos</h1>
+            <h1> Principais Projetos e Conquistas Recentes</h1>
             <table id="table-projetos">
                 <tr>
                     <th>Nome do Projeto</th>
@@ -33,7 +33,7 @@
                 </tr>
                 <tr>
                     <td>Núcleo de Faturamento Centralizado (NFC)</td>
-                    <td>Acompanhamento do desempenho do faturamento das novas unidades da empresa, 3 grupos de energia e mais de R$ 20 milhões mês</td>
+                    <td>Acompanhamento do desempenho do faturamento das novas unidades da empresa, 3 grupos de distribuição de energia e mais de R$ 20 milhões mês</td>
                     <td>2022/2023</td>
                 </tr>
                 <tr>
@@ -53,7 +53,8 @@
                 </tr>
                 <table>
         </section>
-        <h2 id="home"> Acesse minha rede social profissional e saiba mais ==> <a href="https://www.linkedin.com/in/cicero-pierry-bezerra-dos-santos-msc-33449272?originalSubdomain=br" target="_blank">Linkedin </a> </h2>
+        <h2 id="item3">  Tenho orgulho em transformar desafios técnicos em soluções inovadoras, mantendo o foco em resultados, eficiência e qualidade. Estou sempre aberto a novos projetos e parcerias que promovam impacto real no setor elétrico e além.</h2>
+        <h3 id="home"> Acesse minha rede social profissional e saiba mais ==> <a href="https://www.linkedin.com/in/cicero-pierry-bezerra-dos-santos-msc-33449272?originalSubdomain=br" target="_blank">Linkedin </a> </h3>
     </main>
     <footer>
         <p>&copy; Cicero Pierry, todos os direitos reservados</p>
