--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>experiências</title>
+      <title>Conhecimento compartilhado e aprendizado</title>
       <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background-image: url(img/pierry5.jpg);background-size: 600px;background-position: center center;">
