--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculo Cicero Pierry MSC</title>
+    <title>Sua empresa nas mãos certas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
