--- a/projetos.html
+++ b/projetos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>projetos</title>
+      <title>Resultados e Conquistas que podem ser do seu negócio</title>
       <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background-image: url(img/pierry3.jpg);background-size: 700px;background-position: center center;">
