--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1> Bem vindo ao Meu Portifólio</h1>
             <h2> Eu Sou Pierry</h2>
             <img id="profile" src="img/pierry9.jpg" alt="Foto do Pierry">
-            <p class="item2"> Venha Conhecer mais sobre mim, minhas Formações Acadêmicas, Experiências e Resultados Alcançados</p>
+            <p class="item2"> Venha Conhecer mais sobre mim, minhas formações acadêmicas, experiências e resultados alcançados</p>
             <p class="item2"><a href="sobre.html"> Click aqui e saiba mais </a></p>
             </div>
         </section>
