--- a/sobre.html
+++ b/sobre.html
@@ -23,7 +23,7 @@
             <h2> Brasileiro, Habilitação B, CREA-RN – 2123009270, CREA-PB – 41037PB</h2>
             <h3> PCD: Membro superior esquerdo - CID 10: T92; G83.8</h3>
             <img id="profile2" src="img/pierry.jpg" alt="Foto do Pierry">
-            <p class="item3">Mestre em Economia e Engenheiro Eletricista, Profissional com mais de 18 anos de experiência em gestão de contratos, operações e manutenção no setor elétrico, atuando em empresas de grande porte como ENEL e CONTROL Construções. Histórico sólido em negociações milionárias, gestão de equipes próprias e terceirizadas, análise de indicadores (KPI’s), melhoria de processos e rentabilidade de projetos.
+            <p class="item3">Mestre em Economia e Engenheiro Eletricista, Profissional com mais de 18 anos de experiência em gestão de contratos, operações e manutenção no setor elétrico, atuando em empresas de grande porte como Grupo COSAMPA S/A, ENEL S/A e Grupo GPS. Histórico sólido em negociações milionárias, gestão de equipes próprias e terceirizadas, análise de indicadores (KPI’s), melhoria de processos e rentabilidade de projetos.
 
 Reconhecido por resultados expressivos em recuperação de receitas, fechamento de contratos de alto valor e implementação de metodologias de eficiência operacional.
 </p>
