--- a/projetos.html
+++ b/projetos.html
@@ -28,7 +28,7 @@
                 </tr>
                 <tr>
                     <td>Contrato Âncora Goiás e STC ENEL CE</td>
-                    <td>Negociação anual de mais de R$ 500 milhões em novos contratos.</td>
+                    <td>Negociação anual de mais de R$ 500 milhões em novos contratos</td>
                     <td>2024/2025</td>
                 </tr>
                 <tr>
@@ -47,7 +47,7 @@
                     <td>2019/2020</td>
                 </tr>
                 <tr>
-                    <td>Públicações Acadêmicas a nível nacional</td>
+                    <td>Públicações Acadêmicas</td>
                     <td>Artigo publicado na revista planejamento e politicas públicas ==> <a href="https://www.ipea.gov.br/ppp/index.php/PPP/article/view/923" target="_blank">IPEA GOVERNO FEDERAL </a></td>
                     <td>2017/2018</td>
                 </tr>
