--- a/sobre.html
+++ b/sobre.html
@@ -20,23 +20,22 @@
     <main>
         <section id="home" class="container2">
             <div class="item"><h1> Sou Cicero Pierry Bezerra dos Santos, MSc</h1>
-            <h2> Brasileiro, Habilitação B, CREA-RN – 2123009270, CREA-PB – 41037PB</h2>
-            <h3> PCD: Membro superior esquerdo - CID 10: T92; G83.8</h3>
+            <h2> Brasileiro, Habilitação B, CREA-RN, CREA-PB e CREA-CE</h2>
             <img id="profile2" src="img/pierry.jpg" alt="Foto do Pierry">
-            <p class="item3">Mestre em Economia e Engenheiro Eletricista, Profissional com mais de 18 anos de experiência em gestão de contratos, operações e manutenção no setor elétrico, atuando em empresas de grande porte como Grupo COSAMPA S/A, ENEL S/A e Grupo GPS. Histórico sólido em negociações milionárias, gestão de equipes próprias e terceirizadas, análise de indicadores (KPI’s), melhoria de processos e rentabilidade de projetos.
+            <p class="item3">Mestre em Economia e Engenheiro Eletricista, Profissional com mais de 18 anos de experiência em gestão de contratos, operações e manutenção no setor elétrico, atuando em empresas de grande porte como Grupo COSAMPA S/A, ENEL S/A e Grupo GPS S/A. Histórico sólido em negociações milionárias, gestão de equipes próprias e terceirizadas, análise de indicadores (KPI’s), melhoria de processos e rentabilidade de projetos.
 
 Reconhecido por resultados expressivos em recuperação de receitas, fechamento de contratos de alto valor e implementação de metodologias de eficiência operacional.
 </p>
-    <h4 class="item4"> Formação Acadêmica</h4>
+    <h3 class="item4"> Formação Acadêmica</h3>
 <p class="item5">UNIVERSIDADE FEDERAL DO CEARÁ – MESTRADO ECONOMIA APLICADA </p>
 <p class="item5">UNIVERSIDADE REGIONAL DO CARIRI – GRADUAÇÃO CIÊNCIAS ECONOMICAS </p>
 <p class="item5">INSTITUTO FEDERAL DA PARAIBA (IFPB)/UNIVERSIDADE  POTIGUAR (UNP) – ENGENHARIA ELÉTRICA </p>
 <p class="item5">INSTITUTO FEDERAL DO CEARÁ – ELETROTÉCNICO </p>
 
-<h5 class="item4"> Formação Complementar</h5>
+<h4 class="item4"> Formação Complementar</h4>
 <p class="item5">Facilitador no método de gestão da rotina, facilitador academia de lideres in company, formação em BPMN, auditor líder ISO 14.001, cursos de transformadores de força (manutenção e ensaios), inspeção em linhas de AT, equipamentos telecomandados e smartgrid, proteção e automação de SED’S e redes de MT, ensaios e testes elétricos e eletromecânicos, curso de FV (montagem e manutenção), curso de geração heliotérmica, engenharia da confiabilidade, técnicas manutenção PCM,  Lean Manufacture, simulações ARENA (Teoria das filas).</p>
 
-<h6 class="item4"> Habilidades</h6>
+<h5 class="item4"> Habilidades</h5>
             <table id="table-projetos">
                 <tr>
                     <th>Comportamentais</th>
@@ -45,7 +44,7 @@ Reconhecido por resultados expressivos em recuperação de receitas, fechamento 
                 </tr>
                 <tr>
                     <td class="item3">Comunicação em público, gestão de conflitos, desenvolvimento da equipe, empatia, flexibilidade, engajamento, dinamismo e inovação.</td>
-                    <td  class="item3">Inglês – Avançado; Espanhol – Avançado; Italiano – Básico.</td>
+                    <td  class="item3">Inglês – Avançado; Espanhol – Intermediário; Italiano – Básico.</td>
                     <td class="item3">	C e C++ (avançado); R*(avançado); Excel (avançado); Power BI (avançado); Visual Básic (avançado); Word (intermediário); Power Point (Intermediário.); HTML5 (básico); Python (básico).</td>
                 </tr>
                 <table>
@@ -56,6 +55,6 @@ Reconhecido por resultados expressivos em recuperação de receitas, fechamento 
       
 </body>
     <footer>
-        <h7>&copy; Cicero Pierry, todos os direitos reservados</h7>
+        <h6>&copy; Cicero Pierry, todos os direitos reservados</h6>
     </footer>
 </html>
